--- a/11/once_plan_de_mejoramiento.tex
+++ b/11/once_plan_de_mejoramiento.tex
@@ -48,8 +48,8 @@
 	\section*{PROCEDIMIENTO Y CRONOGRAMA:}
 	\begin{enumerate}
 		\item Entrega del plan de mejoramiento al padre de familia.
-		\item Entrega de los talleres desarrollados al docente de la asignatura, el día \textcolor{red}{14 de mayo de 2024} en físico.
-		\item El estudiante debe realizar la sustentación el día \textcolor{red}{14 de mayo de 2024}.
+		\item Entrega de los talleres desarrollados al docente de la asignatura, el día \textcolor{red}{26 de agosto de 2024} en físico.
+		\item El estudiante debe realizar la sustentación el día \textcolor{red}{26 de agosto de 2024}.
 	\end{enumerate}
 	
 	\section*{OBSERVACIONES:}
@@ -78,30 +78,27 @@
 	
 	\vspace{0.5cm}
 	\section*{PLAN DE MEJORAMIENTO}
-	\subsection*{Grado Décimo}
+	\subsection*{Grado Once}
 	
 	A continuación se presenta la lista de desempeños a evaluar en el plan de mejoramiento, cada estudiante realizará los puntos según el desempeño perdido. El estudiante que tenga la asignatura reprobada deberá realizar el plan de mejoramiento en su totalidad.\\
 	
 	
-	\textbf{D1:} Usa el Teorema de Pitágoras para la resolución de triángulos rectángulos
+	\textbf{D1:} Reconoce el concepto de función asi como las diferentes representaciones de esta.
 	
-	\textbf{D2:} Usa las razones trigonométricas para la resolución de triángulos rectángulos
+	\textbf{D2:} Reconoce el concepto de función lineal, función afín, y función cuadrática, y modela situaciones de la vida cotidiana mediante el uso de estas funciones.
 	
-	\textbf{D3:} Modela situaciones de la vida real usando razones trigonométricas y teorema de Pitágoras
+	\textbf{D3:} Encuentra dominio, rango, reconoce su grafica y puntos de interés.
 	
-	\textbf{D4:} Reconoce las identidades pitágoricas con ayuda de la circunferencia unitaria
+	\textbf{D4:} Comprende el concepto de límite de una función.
 	
-	\textbf{D5:} Usa las identitades trigonométricas de ángulos dobles.
+	\textbf{D5:} Usa las propiedades de los límites para encontrar.
 	
-	\textbf{D6:} Resuelve ecuaciones trigonométricas con ayuda de las identidades trigonométricas.
+	\textbf{D6:} Reconoce el concepto de función así como las diferentes representaciones de esta. Saber.
 	
-	\textbf{D7:} Usa el teorema del Seno para la resolución de triángulos oblicuángulos
+	\textbf{D7:} Calcula adecuadamente límites al infinito.
 	
-	\textbf{D8:} Usa el teorema del Coseno para la resolución de triángulos oblicuángulos
+	\textbf{D8:} Interpreta adecuadamente la razón de cambio como un límite especial.
 	
-	\textbf{D9:} Modela situaciones de la vida real usando el teorema del Seno y del Coseno.
-	
-	\textbf{D10:} Encuentra el área de un triángulo aplicando el teorema de Herón
 	
 	
 	%---------------------------------------------------
@@ -110,16 +107,29 @@
 	\vspace{1cm}
 	
 	\begin{itemize}
-		\item \textbf{Desempeños trigonometría aplicada} (D1, D2, D3, D7, D8, D9, D10)
+		\item \textbf{Desempeños funciones y dominios} (D1, D2, D3)
 		
 		\begin{figure}[h]
-			\includegraphics[scale=0.5]{triangulo_rectangulo.png}
+			\includegraphics[scale=0.9]{funciones.png}
 		\end{figure}
 		\newpage
-		\item \textbf{Desempeños trigonometría analítica} (D4, D5, D6)
-		\begin{figure}[h]
-			\includegraphics[scale=0.5]{identidades.png}
+		\item \textbf{Desempeños concepto de límite} (D4, D5, D6, D7, D8)
+		
+		\begin{figure}[h!]
+			\includegraphics[scale = 0.8]{concepto_de_limite.png}\\
 		\end{figure}
+		
+		
+		\begin{figure}[h]
+			
+			\includegraphics[scale = 0.9]{estimacion_limite.png}\\
+			
+		\end{figure}
+		
+		\begin{figure}[h]
+			\includegraphics[scale = 0.9]{tabla_limite.png}\\
+		\end{figure}
+		
 	\end{itemize}
 	
 	
