--- a/11/once_plan_de_mejoramiento.tex
+++ b/11/once_plan_de_mejoramiento.tex
@@ -116,18 +116,22 @@
 		\item \textbf{Desempeños concepto de límite} (D4, D5, D6, D7, D8)
 		
 		\begin{figure}[h!]
-			\includegraphics[scale = 0.8]{concepto_de_limite.png}\\
+			\includegraphics[scale = 0.9]{concepto_de_limite.png}\\
 		\end{figure}
 		
 		
 		\begin{figure}[h]
 			
-			\includegraphics[scale = 0.9]{estimacion_limite.png}\\
+			\includegraphics[scale = 0.7]{estimacion_limite.png}\\
 			
 		\end{figure}
 		
 		\begin{figure}[h]
-			\includegraphics[scale = 0.9]{tabla_limite.png}\\
+			\includegraphics[scale = 0.7]{tabla_limite.png}\\
+		\end{figure}
+
+		\begin{figure}[h]
+			\includegraphics[scale = 0.7]{propiedades.png}\\
 		\end{figure}
 		
 	\end{itemize}
