--- a/8/octavo_plan_de_mejoramiento.tex
+++ b/8/octavo_plan_de_mejoramiento.tex
@@ -48,8 +48,8 @@
 	\section*{PROCEDIMIENTO Y CRONOGRAMA:}
 	\begin{enumerate}
 		\item Entrega del plan de mejoramiento al padre de familia.
-		\item Entrega de los talleres desarrollados al docente de la asignatura, el día \textcolor{red}{14 de mayo de 2024} en físico.
-		\item El estudiante debe realizar la sustentación el día \textcolor{red}{14 de mayo de 2024}.
+		\item Entrega de los talleres desarrollados al docente de la asignatura, el día \textcolor{red}{26 de agosto de 2024} en físico.
+		\item El estudiante debe realizar la sustentación el día \textcolor{red}{26 de agosto de 2024}.
 	\end{enumerate}
 	
 	\section*{OBSERVACIONES:}
@@ -78,26 +78,28 @@
 	
 	\vspace{0.5cm}
 	\section*{PLAN DE MEJORAMIENTO}
-	\subsection*{Grado Décimo}
+	\subsection*{Grado Octavo}
 	
 	A continuación se presenta la lista de desempeños a evaluar en el plan de mejoramiento, cada estudiante realizará los puntos según el desempeño perdido. El estudiante que tenga la asignatura reprobada deberá realizar el plan de mejoramiento en su totalidad.\\
 	
 	
-	\textbf{D1:} Distingue entre las diferentes unidades de medida que se pueden usar en los ángulos.
+	\textbf{D1:} Reconoce la ecuación de recta, encuentra rectas paralelas y perpendiculares a partir de la pendiente
 	
-	\textbf{D2:} Reconoce las graficas de seno y coseno y las dibuja a partir de la circunferencia unitaria.
+	\textbf{D2:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método grafico
 	
-	\textbf{D3:} Reconoce las graficas de las funciones trigonométricas, seno, coseno, tangente, cotangente, secante y cosecante.
+	\textbf{D3:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método de sustitución
 	
-	\textbf{D4:} Reconoce los ángulos notables de las funciones trigonométricas de 0° a 90°.
+	\textbf{D4:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método de igualación
 	
-	\textbf{D5:} Reconoce los ángulos notables de las funciones trigonométricas de 0° a 360°.
+	\textbf{D5:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método de reducción
 	
-	\textbf{D6:} Reconoce la gráfica de las funciones trigonométricas a partir de la transformación de funciones trigonométricas más sencillas.
+	\textbf{D6:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método grafico Saber hacer
 	
-	\textbf{D7:} Convierte de grados decimales a radianes y de grados decimales a grados minutos y segundos.
+	\textbf{D7:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método de sustitución Saber hacer
 	
-	\textbf{D8:} Encuentra la grafica de funciones trigonométricas a partir de las transformaciones de funciones.
+	\textbf{D8:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método de igualación saber hacer
+	
+	\textbf{D9:} Resuelve adecuadamente sistemas de ecuaciones lineales por medio del método de reducción Saber hacer
 	
 	
 	%---------------------------------------------------
@@ -106,8 +108,44 @@
 	\vspace{1cm}
 	
 	\begin{itemize}
-		\item \textbf{Desempeños trigonometría aplicada}
+		\item \textbf{Desempeños 1, 2, 6}
 		
+		Resuelve el siguiente sistema de ecuaciones por el método gŕafico.
+		
+		
+		\begin{figure}[h]
+			\includegraphics[scale = 0.5]{grafico.png}
+		\end{figure}
+	
+		\begin{figure}[h]
+		\item \textbf{Desempeños 3, 7}
+		
+		Resuelve el siguiente sistema de ecuaciones por el método de sustitución.
+		
+		
+			\includegraphics[scale = 0.4]{sustitucion.png}
+		\end{figure}
+
+		\begin{figure}[h]
+		\item \textbf{Desempeños 4, 8}
+		
+		Resuelve el siguiente sistema de ecuaciones por el método de igualación.
+		
+		
+		
+			\includegraphics[scale = 0.4]{igualacion.png}
+		\end{figure}
+
+		\begin{figure}[h]
+		\item \textbf{Desempeños 5, 9}
+		
+		Resuelve el siguiente sistema de ecuaciones por el método de eliminación.
+		
+		
+			\includegraphics[scale = 0.4]{eliminacion.png}
+		\end{figure}
+
+
 		
 	\end{itemize}
 	
