--- a/8/octavo_plan_de_mejoramiento.tex
+++ b/8/octavo_plan_de_mejoramiento.tex
@@ -31,7 +31,7 @@
 				\textbf{PLAN DE MEJORAMIENTO}
 				
 				\vspace{0.1cm}
-				\textbf{GRADO DÉCIMO}
+				\textbf{GRADO OCTAVO}
 				
 			\end{center}
 			\\
