--- a/9/noveno_plan_de_mejoramiento.tex
+++ b/9/noveno_plan_de_mejoramiento.tex
@@ -31,7 +31,7 @@
 				\textbf{PLAN DE MEJORAMIENTO}
 				
 				\vspace{0.1cm}
-				\textbf{GRADO DÉCIMO}
+				\textbf{GRADO NOVENO}
 				
 			\end{center}
 			\\
@@ -48,8 +48,8 @@
 	\section*{PROCEDIMIENTO Y CRONOGRAMA:}
 	\begin{enumerate}
 		\item Entrega del plan de mejoramiento al padre de familia.
-		\item Entrega de los talleres desarrollados al docente de la asignatura, el día \textcolor{red}{14 de mayo de 2024} en físico.
-		\item El estudiante debe realizar la sustentación el día \textcolor{red}{14 de mayo de 2024}.
+		\item Entrega de los talleres desarrollados al docente de la asignatura, el día \textcolor{red}{26 de agosto de 2024} en físico.
+		\item El estudiante debe realizar la sustentación el día \textcolor{red}{26 de agosto de 2024}.
 	\end{enumerate}
 	
 	\section*{OBSERVACIONES:}
@@ -78,26 +78,26 @@
 	
 	\vspace{0.5cm}
 	\section*{PLAN DE MEJORAMIENTO}
-	\subsection*{Grado Décimo}
+	\subsection*{Grado Noveno}
 	
 	A continuación se presenta la lista de desempeños a evaluar en el plan de mejoramiento, cada estudiante realizará los puntos según el desempeño perdido. El estudiante que tenga la asignatura reprobada deberá realizar el plan de mejoramiento en su totalidad.\\
 	
 	
-	\textbf{D1:} Distingue entre las diferentes unidades de medida que se pueden usar en los ángulos.
+	\textbf{D1:} Optimiza situaciones de la vida cotidiana mediante la modelación de situaciones con la ecuación cuadrática
 	
-	\textbf{D2:} Reconoce las graficas de seno y coseno y las dibuja a partir de la circunferencia unitaria.
+	\textbf{D2:} Factoriza adecuadamente polinomios algebraicos con base a los diferentes casos de factorización
 	
-	\textbf{D3:} Reconoce las graficas de las funciones trigonométricas, seno, coseno, tangente, cotangente, secante y cosecante.
+	\textbf{D3:} Encuentra los ceros de un polinomio mediante la factorización.
 	
-	\textbf{D4:} Reconoce los ángulos notables de las funciones trigonométricas de 0° a 90°.
+	\textbf{D4:} Divide adecuadamente expresiones algebraicas mediante el proceso análogo a la división de números naturales.
 	
-	\textbf{D5:} Reconoce los ángulos notables de las funciones trigonométricas de 0° a 360°.
+	\textbf{D5:} Realiza operaciones como suma y resta de polinomios, encontrando el MCD de polinomios.
 	
-	\textbf{D6:} Reconoce la gráfica de las funciones trigonométricas a partir de la transformación de funciones trigonométricas más sencillas.
+	\textbf{D6:} Realiza operaciones como suma y resta de polinomios, encontrando el MCM de polinomios.
 	
-	\textbf{D7:} Convierte de grados decimales a radianes y de grados decimales a grados minutos y segundos.
+	\textbf{D7:} Reconoce y grafica la función exponencial
 	
-	\textbf{D8:} Encuentra la grafica de funciones trigonométricas a partir de las transformaciones de funciones.
+
 	
 	
 	%---------------------------------------------------
@@ -106,16 +106,46 @@
 	\vspace{1cm}
 	
 	\begin{itemize}
-		\item \textbf{Desempeños trigonometría aplicada}
+		\item \textbf{Desempeños 1}
+	
 		
 		\begin{figure}[h]
-			\includegraphics[scale=0.5]{triangulo_rectangulo.png}
+			\includegraphics[scale=0.4]{ecuacionescuadraticas.png}
 		\end{figure}
-		\newpage
-		\item \textbf{Desempeños trigonometría analítica}
+	
+	
+	Resueleve los siguientes problemas modelando el problema mediante una ecuación cuadrática.
+	
+		\begin{figure}[h!]
+			\includegraphics[scale=0.32]{problemas.png}
+		\end{figure}
+	
+	
+	
+	\newpage
+	
+		\item \textbf{Desempeños 2, 3, 4, 5, 6}
+		
+		
+		
+		\begin{figure}[h!]
+			\includegraphics[scale=0.5]{mcm.png}
+		\end{figure}
+
 		\begin{figure}[h]
-			\includegraphics[scale=0.5]{identidades.png}
+			\includegraphics[scale=0.4]{mcd.png}
+		\end{figure}		
+	
+	\newpage
+	
+		\item \textbf{Desempeño 7}
+		
+
+		\begin{figure}[h]
+			\includegraphics[scale=0.6]{exp.png}
 		\end{figure}
+
+	
 	\end{itemize}
 	
 	
